fixes spacing of top navs

--- a/source/css/styles.86.css
+++ b/source/css/styles.86.css
@@ -3438,11 +3438,11 @@ blockquote{
     }
 
     .doc-nav.sub {
-        top: 117.5px;
+        top: 117px;
     }
 
     .doc-nav.subsub{
-        top: 159px;
+        top: 158px;
     }
 
     .anchor {
@@ -3513,11 +3513,11 @@ blockquote{
     }
 
     .doc-nav.sub{
-        top: 117px;
+        top: 113px;
     }
 
     .doc-nav.subsub{
-        top: 158px;
+        top: 150px;
     }
 
     .doc-nav select {
